Scala Assignments/1.Codingbat/16. Recursion-1/21.countPairs.txt
--Java

public int countPairs(String str) {
  if(str.length()<3)
  {
    return 0;
  }
  else if(str.charAt(0)==str.charAt(2))
   { 
    return 1+countPairs(str.substring(1));
   }
   else
   {
     return countPairs(str.substring(1));
   }
}


--Scala

scala> def countpairs(str:String):Int={
     | if(str.length()<3) 0
     | else if(str.charAt(0)==str.charAt(2)) 1+countpairs(str.substring(1))
     | else countpairs(str.substring(1))}
countpairs: (str: String)Int

scala> countpairs
<console>:13: error: missing argument list for method countpairs
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `countpairs _` or `countpairs(_)` instead of `countpairs`.
       countpairs
       ^

scala>

scala> countpairs("axaxax")
res8: Int = 4
